# scrap-application

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scrap-config.yml  test.py
src/: scrap.py  utils.py
